# olus

./: .gitignore  Cargo.toml  Readme.md  cspell.json  mit-license.md
editor-support/tree-sitter-olus/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  Readme.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
editor-support/tree-sitter-olus/bindings/c/: tree-sitter-olus.pc.in
editor-support/tree-sitter-olus/bindings/go/: binding.go  binding_test.go
editor-support/tree-sitter-olus/bindings/node/: binding.cc  index.js
editor-support/tree-sitter-olus/bindings/python/tests/: test_binding.py
editor-support/tree-sitter-olus/bindings/python/tree_sitter_olus/: __init__.py  binding.c
editor-support/tree-sitter-olus/bindings/rust/: build.rs  lib.rs
editor-support/tree-sitter-olus/bindings/swift/TreeSitterOlus/: olus.h
editor-support/tree-sitter-olus/bindings/swift/TreeSitterOlusTests/: TreeSitterOlusTests.swift
editor-support/tree-sitter-olus/src/: grammar.json  node-types.json  parser.c  scanner.c
editor-support/zed/: extension.toml
editor-support/zed/languages/olus/: brackets.scm  config.toml  highlights.scm  outline.scm
examples/: test.olus
src/: diagnostic.rs  files.rs  ir.rs  lexer.rs  lib.rs  names.rs  parser.rs
src/front/: compiler.rs  grammar.rs  indentation.rs  mod.rs  name_resolution.rs  renamer.rs  syntax.rs  unparser.rs
src/interpreter/: mod.rs
src/parser/: compiler.rs  cst_parser.rs  grammar.rs  indentation.rs  lexer.rs  mod.rs  name_resolution.rs  parser.old.rs  parser.rs  syntax.rs  syntax_kind.rs  token.rs  unparser.rs
