[package]
name = "olus"
version = "0.1.0"
description = "Experimental/toy programming language"
keywords = ["olus", "compiler"]
categories = ["compilers"]
repository = "https://github.com/recmo/olus"
edition = "2024"
default-run = "olus"
license = "MIT"
license_file = "mit-license.md"

[dependencies]
ariadne = "0.5.0"
logos = "0.15.0"
rowan = "0.16.1"
strum = { version = "0.26.3", features = ["derive"] }
yansi = "1.0.1"

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3

# Produce debug info for release builds
[profile.release]
debug = true

[dev-dependencies]
indoc = "2.0.5"

[package.metadata.docs.rs]
rustdoc-args = [
    "--cfg",
    "has_cfg_doc",
    "--html-in-header",
    ".cargo/katex-header.html",
]
all-features = true
