[package]
name = "olus"
version = "0.1.0"
description = "Experimental/toy programming language"
keywords = ["olus", "compiler"]
categories = ["compilers"]
repository = "https://github.com/recmo/olus"
edition = "2024"
default-run = "olus"
license = "MIT"

[lints.rust]
unsafe_code = "warn"
# missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
perf = "warn"
complexity = "warn"
style = "warn"
correctness = "warn"
suspicious = "warn"
# missing_docs_in_private_items = { level = "allow", priority = 1 }

[dependencies]
chumsky = { version = "1.0.0-alpha.7", git = "https://github.com/zesterer/chumsky", rev = "282bf5e", default-features = false, features = [
    "nightly",
    "extension",
] }
ariadne = "0.5.0"
logos = "0.15.0"
yansi = "1.0.1"
cstree = "0.12.2"
num_enum = "0.7.3"
petgraph = "0.7.1"

[dev-dependencies]
indoc = "2.0.5"

# Compilation profile for any non-workspace member. We want to optimize these even in debug mode.
[profile.dev.package."*"]
opt-level = 3

# Produce debug info for release builds
[profile.release]
debug = true

# Allow Katex in docs
[package.metadata.docs.rs]
rustdoc-args = [
    "--cfg",
    "has_cfg_doc",
    "--html-in-header",
    ".cargo/katex-header.html",
]
all-features = true
